# libcco-language-server

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
client/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
client/src/: extension.ts
client/syntaxes/: cco.tmLanguage.json
server/: cco_analyze.c  cco_analyze.h  json.c  json.h  lsp.c  lsp.h  main.c  text_document.c  text_document.h
